2008-02-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGramplets.py: 
	made detached_width, height larger for the pedigree gramplet

2008-02-28  Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/DefaultGramplets.py: improve (??) Pedigree Gramplet
	* src/DataViews/GrampletView.py: add a no-wrap method

2008-02-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGramplets.py: new Pedigree Gramplet
	* src/DataViews/GrampletView.py: added help button on undocked windows

2008-02-27 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/Editors/_EditNote.py: empty_object() add extratype to object
	0001476: Opening the new note dialog/editor and cancelling shouldn't ask 
	to save changes. there are no changes 

2008-02-27 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/DbManager.py: rename glade variable to glade_xml_file

2008-02-25 Frederik De Richter <frederik.de.richter@pandora.be>
	* src/plugins/SoundGen.py
	links to wiki manual 

2008-02-27 Brian Matherly <brian@gramps-project.org>
	* src/GrampsDbUtils/_ReadXML.py:
	Don't allow newer Gramps files to be imported (#0001722).

2008-02-27 Stéphane Charette <stephanecharette@gmail.com>
	* src/plugins/GVFamilyLines.py:
	0001549: use standard date formats for FamilyLines

2008-02-26 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py:
	0001828: update cli handling of new options. (new in 3.0?)

2008-02-26 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py:
	0001835: cli crashes for all reports. NoneType has no attribute 
	get_gramps_id

2008-02-26 Benny Malengier <benny.malengier@gramps-project.org>
    * src/ScratchPad.py: bug when dragging sourceref #1833
    * src/GrampsDisplay.py: remove whitespace

2008-02-26 Peter Landgren <peter.talken@telia.com>
    * src/plugins/FanChart.py: Fix for printing in landscape issue #1753

2008-02-25 Brian Matherly <brian@gramps-project.org>